@@ -39,6 +39,7 @@
 
 //---------------------------------------------------------------------------
 
+#ifndef OLD_GRID
 
 enum {
     wxGRID_TEXT_CTRL,
@@ -235,6 +236,7 @@ enum {
     wxEVT_GRID_LABEL_RCLICK,
 };
 
+#endif
 
 //---------------------------------------------------------------------------
 
